# weather-svc

./: LICENSE  README.md  stack.yaml  weather-svc.cabal  weather-svc.conf
etc/: weather-svc.conf
src/: Main.hs
