name:                weather-svc
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/f-me/weather-svc#readme
license:             BSD3
license-file:        LICENSE
author:              Max Taldykin
maintainer:          max@formalmethods.ru
copyright:           2015 Formal methods
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable weather-svc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:
    base,
    containers,
    time,
    lens,
    aeson,
    lens-aeson,
    either,
    configurator,
    servant-server,
    transformers,
    double-conversion,
    text,
    wai-extra,
    warp,
    wreq

  default-extensions:
    OverloadedStrings,
    LambdaCase, TupleSections,
    DataKinds, TypeFamilies, TypeOperators
